<resources>
    <string name="app_name">Annex</string>
    <string name="registration_form">Client Registration Form</string>
    <string name="client_details">Client Details</string>
    <string name="first_name">First Name</string>
    <string name="other_names">Other Names</string>
    <string name="address">Address</string>
    <string name="customer_id">Customer Id</string>
    <string name="national_id">National Id</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="photo">Upload Photo</string>
    <string name="register_client">Create new client</string>
    <string name="first_name_error">Enter valid name</string>
    <string name="address_error">Enter Valid Address</string>
    <string name="national_id_error">Enter valid National Id</string>
    <string name="mobile_error">Enter valid Mobile Number</string>
    <string name="add_new_user">Add New Customer</string>
    <string name="view_customers">View Customers</string>
    <string name="get_customer">View Customers</string>
    <string name="filterby">Filter By</string>
    <string name="search_btn_text">Search</string>

    <string-array name="filters">
        <item>Customer ID</item>
        <item>National ID</item>
        <item>Name</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="criteria">search key is required</string>
    <string name="searchKey">search value is required</string>
    <string name="full_names">Full Name</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="edit_btn_text">Edit</string>
    <string name="update_client">Save</string>
</resources>
