<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/title">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_form"
                    android:textSize="@dimen/default_title_text_size"
                    android:padding="@dimen/default_title_padding"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/default_parent_margin_top"
        android:layout_marginBottom="@dimen/default_parent_margin_top"
        android:layout_marginRight="@dimen/default_parent_margin_sides"
        android:layout_marginLeft="@dimen/default_parent_margin_sides"
        android:layout_below="@id/title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_inner_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_details"
                android:textSize="@dimen/default_title_text_size"
                android:padding="@dimen/default_title_padding"
                android:textAlignment="center"
                android:layout_alignParentStart="true"
                android:id="@+id/client_detail_title"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first_name_layout"
                android:layout_below="@+id/client_detail_title">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textSize="@dimen/default_text_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/default_input_gaps"
                    android:id="@+id/first_name"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/other_name_layout"
                android:layout_below="@+id/first_name_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other_names"
                    android:textSize="@dimen/default_text_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/default_input_gaps"
                    android:id="@+id/other_name"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_layout"
                android:layout_below="@+id/other_name_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textSize="@dimen/default_text_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/default_input_gaps"
                    android:id="@+id/address"
                    android:gravity="top"
                    android:minLines="4"
                    android:maxLines="6"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/national_id_layout"
                android:layout_below="@+id/address_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/national_id"
                    android:textSize="@dimen/default_text_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/default_input_gaps"
                    android:layout_below="@id/customerId"
                    android:id="@+id/national_id"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobileNo_layout"
                android:layout_below="@+id/national_id_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    android:textSize="@dimen/default_text_size"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/default_input_gaps"
                    android:layout_below="@id/national_id"
                    android:id="@+id/mobileNo"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/mobileNo_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_gap">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo"
                        android:textSize="@dimen/upload_text_size"
                        android:padding="@dimen/default_title_padding"
                        android:textAlignment="center"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/rounded_button2"
                        android:id="@+id/client_photo"
                        />

                    <ImageView
                        android:layout_width="@dimen/default_image_width"
                        android:layout_height="@dimen/default_image_height"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:visibility="invisible"
                        android:id="@+id/client_image"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/rounded_button"
                android:id="@+id/saveClient"
                android:text="@string/register_client"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>