<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchForCustomer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_customer"
        android:textSize="@dimen/default_title_text_size"
        android:padding="@dimen/default_title_padding"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/search_title"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_card"
        android:layout_below="@id/search_title"
        android:layout_marginTop="@dimen/default_parent_margin_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/filterby"
                android:textSize="@dimen/default_text_size"
                android:layout_margin="@dimen/default_gap"
                android:id="@+id/filter_by_text"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/criteria"
                android:layout_margin="@dimen/default_gap"
                android:layout_toRightOf="@id/filter_by_text"
                />

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/filter_by_text"
                android:layout_margin="@dimen/default_gap"
                android:id="@+id/value_text"
                android:textSize="@dimen/default_text_size"
                android:text="Value"/>

            <EditText
                android:layout_width="180dp"
                android:layout_margin="@dimen/default_gap"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:layout_toRightOf="@id/value_text"
                android:layout_below="@id/criteria"
                android:id="@+id/search_key"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:text="@string/search_btn_text"
                android:background="@drawable/rounded_button"
                android:padding="@dimen/default_gap"
                android:layout_below="@id/search_key"
                android:id="@+id/search_btn"/>


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_card"
        android:padding="@dimen/default_gap"
        android:layout_margin="@dimen/default_gap"
        android:id="@+id/client_view_pager">

    </androidx.viewpager.widget.ViewPager>

</RelativeLayout>